--- a/style.css
+++ b/style.css
@@ -23,8 +23,13 @@ body {
     width: 500px;
 }
 
+h1 {
+    font-size: 2.3rem;
+}
+
 p {
     margin: 2rem;
+    font-size: 1.5rem;
 }
 
 .buttons {
